--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -173,7 +173,7 @@
         create_device_interface_type: Virtual
         create_device_interface_parent_interface: ae1
         create_device_interface_mode: Access
-        create_device_interface_untagged_vlan: Management
+        create_device_interface_untagged_vlan: Management (11)
 
       - create_device_interface_name: ae1.15
         create_device_interface_device: hqcrfw1.secnetwork.org
