--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -424,3 +424,29 @@
           untagged_vlan: '{{ item.create_device_interface_untagged_vlan }}'       
         state: present
       with_items: '{{ create_device_interface }}' 
+
+    - name: Create PAN-PA-850 IP address
+      netbox_ip_address:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          address: 10.0.11.11
+          tenant: secnet
+          status: active
+          interface:
+            name: Management
+            device: hqcrfw1.secnetwork.org         
+        state: present
+
+    - name: Create PAN-PA-850 IP address
+      netbox_ip_address:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          address: 10.0.11.1
+          tenant: secnet
+          status: active
+          interface:
+            name: ae1.11
+            device: hqcrfw1.secnetwork.org         
+        state: present
