--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -425,7 +425,7 @@
         state: present
       with_items: '{{ create_device_interface }}' 
 
-    - name: Create PAN-PA-850 IP address
+    - name: Create PAN-PA-850 IP address MGT
       netbox_ip_address:
         netbox_url: '{{ netbox_url }}'
         netbox_token: '{{ netbox_token }}'
@@ -433,12 +433,12 @@
           address: 10.0.11.11
           tenant: secnet
           status: active
-          interface:
+          assigned_object:
             name: Management
             device: hqcrfw1.secnetwork.org         
         state: present
 
-    - name: Create PAN-PA-850 IP address
+    - name: Create PAN-PA-850 IP address MGT VLAN
       netbox_ip_address:
         netbox_url: '{{ netbox_url }}'
         netbox_token: '{{ netbox_token }}'
@@ -446,7 +446,7 @@
           address: 10.0.11.1
           tenant: secnet
           status: active
-          interface:
+          assigned_object:
             name: ae1.11
             device: hqcrfw1.secnetwork.org         
         state: present
