adding admin vlan and DNS information

--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -435,7 +435,8 @@
           status: active
           assigned_object:
             name: Management
-            device: hqcrfw1.secnetwork.org         
+            device: hqcrfw1.secnetwork.org
+          dns_name: hqcrfw1.secnetwork.org
         state: present
 
     - name: Create PAN-PA-850 IP address MGT VLAN
@@ -448,5 +449,20 @@
           status: active
           assigned_object:
             name: ae1.11
-            device: hqcrfw1.secnetwork.org         
+            device: hqcrfw1.secnetwork.org
+          dns_name: hqcrfw1-mgt.secnetwork.org                     
+        state: present
+
+    - name: Create PAN-PA-850 IP address Admins VLAN
+      netbox_ip_address:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          address: 10.0.11.1
+          tenant: secnet
+          status: active
+          assigned_object:
+            name: ae1.15
+            device: hqcrfw1.secnetwork.org
+          dns_name: hqcrfw1-admins.secnetwork.org                     
         state: present
