--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -379,6 +379,7 @@
           rack: Primary Rack
           tenant: secnet
           platform: PAN-OS 10.2.0
+          primary_ip4: 10.0.11.11
         state: present
 
     - name: Create Internal LAG Interface 
@@ -458,7 +459,7 @@
         netbox_url: '{{ netbox_url }}'
         netbox_token: '{{ netbox_token }}'
         data:
-          address: 10.0.11.1
+          address: 10.0.15.1
           tenant: secnet
           status: active
           assigned_object:
