--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -463,7 +463,21 @@
           tenant: secnet
           status: active
           assigned_object:
-            name: ae1.21
+            name: ae1.15
             device: hqcrfw1.secnetwork.org
           dns_name: hqcrfw1-admins.secnetwork.org                     
         state: present
+
+    - name: Create PAN-PA-850 IP address vManagement VLAN
+      netbox_ip_address:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          address: 10.0.21.1
+          tenant: secnet
+          status: active
+          assigned_object:
+            name: ae1.21
+            device: hqcrfw1.secnetwork.org
+          dns_name: hqcrfw1-vmanagement.secnetwork.org                     
+        state: present        
