--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -438,7 +438,7 @@
             name: Management
             device: hqcrfw1.secnetwork.org
           dns_name: hqcrfw1.secnetwork.org
-        state: present
+        state: new
 
     - name: Create PAN-PA-850 IP address MGT VLAN
       netbox_ip_address:
@@ -447,12 +447,12 @@
         data:
           address: 10.0.11.1
           tenant: secnet
-          status: new
+          status: active
           assigned_object:
             name: ae1.11
             device: hqcrfw1.secnetwork.org
           dns_name: hqcrfw1-mgt.secnetwork.org                     
-        state: present
+        state: new
 
     - name: Create PAN-PA-850 IP address Admins VLAN
       netbox_ip_address:
@@ -461,12 +461,12 @@
         data:
           address: 10.0.15.1
           tenant: secnet
-          status: new
+          status: active
           assigned_object:
             name: ae1.15
             device: hqcrfw1.secnetwork.org
           dns_name: hqcrfw1-admins.secnetwork.org                     
-        state: present
+        state: new
 
     - name: Create PAN-PA-850 IP address vManagement VLAN
       netbox_ip_address:
@@ -475,9 +475,9 @@
         data:
           address: 10.0.21.1
           tenant: secnet
-          status: new
+          status: active
           assigned_object:
             name: ae1.21
             device: hqcrfw1.secnetwork.org
           dns_name: hqcrfw1-vmanagement.secnetwork.org                     
-        state: present        
+        state: new
