--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -372,11 +372,7 @@
           address: 10.0.11.11
           tenant: secnet
           status: active
-          assigned_object:
-            name: Management
-            device: hqcrfw1.secnetwork.org
-          dns_name: hqcrfw1.secnetwork.org
-        state: present
+        state: reserved
 
     - name: Create Device HQCRFW1
       netbox_device:
@@ -439,6 +435,20 @@
           untagged_vlan: '{{ item.create_device_interface_untagged_vlan }}'       
         state: present
       with_items: '{{ create_device_interface }}' 
+
+    - name: Create PAN-PA-850 IP address MGT
+      netbox_ip_address:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          address: 10.0.11.11
+          tenant: secnet
+          status: active
+          assigned_object:
+            name: Management
+            device: hqcrfw1.secnetwork.org
+          dns_name: hqcrfw1.secnetwork.org
+        state: present
 
     - name: Create PAN-PA-850 IP address MGT VLAN
       netbox_ip_address:
