--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -371,8 +371,8 @@
         data:
           address: 10.0.11.11
           tenant: secnet
-          status: active
-        state: reserved
+          status: reserved
+        state: present
 
     - name: Create Device HQCRFW1
       netbox_device:
