--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -364,16 +364,6 @@
         state: present
       with_items: '{{ device_interface_template }}'
 
-    - name: Create PAN-PA-850 IP address MGT
-      netbox_ip_address:
-        netbox_url: '{{ netbox_url }}'
-        netbox_token: '{{ netbox_token }}'
-        data:
-          address: 10.0.11.11
-          tenant: secnet
-          status: reserved
-        state: present
-
     - name: Create Device HQCRFW1
       netbox_device:
         netbox_url: '{{ netbox_url }}'
@@ -491,3 +481,12 @@
             device: hqcrfw1.secnetwork.org
           dns_name: hqcrfw1-vmanagement.secnetwork.org                     
         state: present
+
+    - name: Update Device HQCRFW1
+      netbox_device:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          name: hqcrfw1.secnetwork.org
+          primary_ip4: 10.0.11.11
+        state: present        
